# c3template

./: Cargo.toml  README.md  wokwi.toml
.cargo/: config.toml
src/: main.rs
