[package]
name = "template"
version = "0.1.0"
edition = "2021"
authors = ["VicStew <victorstew5@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "1.0.0-alpha.8"
embedded-svc = "0.27.0"
esp-idf-hal = "0.43.1"
esp-idf-svc = "0.48.1"
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
log = "0.4"
sensible-env-logger = "0.3.2"
esp-println = { version = "0.7.0", features = ["esp32c3"] }

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"
panic-abort = "0.3"
